--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<div id='myDiv'></div>
 	<script type="text/javascript">
 		var xmlhttp = new XMLHttpRequest();
-		var url = 'http://api.nnzhp.cn/api/user/stu_info';
+		var url = 'https://api.apiopen.top/developerLogin';
 		xmlhttp.onreadystatechange=function()
 		{
 			if (xmlhttp.readyState==4 && xmlhttp.status==200)
