--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Vue 测试实例 - 菜鸟教程(runoob.com)</title>
+	<title>XBSChurch</title>
 	<script src="https://cdn.staticfile.org/vue/2.4.2/vue.min.js"></script>
 </head>
 <body>
@@ -29,8 +29,8 @@
 		var vm = new Vue({
 			el: '#vue_det',
 			data: {
-				site: "菜鸟教程",
-				url: "www.runoob.com",
+				site: "教程",
+				url: "gospel",
 				alexa: "10000"
 			},
 			methods: {
