--- a/index.html
+++ b/index.html
@@ -1,48 +1,57 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>XBSChurch</title>
-	<script src="https://cdn.staticfile.org/vue/2.4.2/vue.min.js"></script>
-</head>
-<body>
-	<div id="app">
-		<h1>site : {{site}}</h1>
-		<h1>url : {{url}}</h1>
-		<h1>{{details()}}</h1>
-    <p>
-      <button @click="testBtn">ClikeMe</button>
-    </p>
-	</div>
-	<div id='myDiv'></div>
-	<script type="text/javascript">
-		var xmlhttp = new XMLHttpRequest();
-		var url = 'https://api.apiopen.top/developerLogin';
-		xmlhttp.onreadystatechange=function()
-		{
-			if (xmlhttp.readyState==4 && xmlhttp.status==200)
-			{
-				document.getElementById("myDiv").innerHTML=xmlhttp.responseText;
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>福音驿站</title>
+		<style type="text/css">
+			.content {
+				margin: 20px auto;
 			}
-		}
-		
-		var vm = new Vue({
-			el: '#app',
-			data: {
-				site: "教程",
-				url: "gospel",
-				alexa: "10000"
-			},
-			methods: {
-				details: function() {
-					return  this.site + " - 学的不仅是技术，更是梦想！";
-				},
-        testBtn: function() {
-          xmlhttp.open('GET', url, true);
-		xmlhttp.send();
-        }
+
+			.header {
+				font-size: 25px;
+				color: royalblue;
 			}
-		})
-	</script>
-</body>
+
+			.player {
+				text-align: center;
+				width: 100%;
+				background: #000;
+				position: relative;
+				padding-bottom: 56.25%;
+				/*需要用padding来维持16:9比例,也就是9除以16*/
+				height: 0;
+			}
+
+			.player video {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%
+		</style>
+	</head>
+	<body>
+		<div class="content">
+			<div class="header">
+				福音短片-耶稣到底是谁?
+			</div>
+			<div class="player">
+				<video width="100%" controls>
+					<source src="videos/gospel-jesus.mp4" type="video/mp4">
+				</video>
+			</div>
+		</div>
+		<div class="content">
+			<div class="header">
+				福音短片-碎落盘子
+			</div>
+			<div class="player">
+				<video controls>
+					<source src="videos/gospel-meaning.mp4" type="video/mp4">
+				</video>
+			</div>
+		</div>
+	</body>
 </html>
